--- a/gREM_ms_07082014_new.tex
+++ b/gREM_ms_07082014_new.tex
@@ -97,23 +97,17 @@ marcus.rowcliffe@ioz.ac.uk
 Acoustic detection, Camera traps, Marine, Population monitoring, Simulations, Terrestrial 
 
 \section{Introduction}
-%Wildlife montoring important (declines in populations, global declines)
-%Wildlife monitoring tech growing in sophication and widespread (remote sensors visual and acoustic)
-%Difficult to estimate abundance and densities (needed for monitoring)
+
 Animal population density is one of the fundamental measures needed in ecology and conservation. The density of a population has important implications for a range of issues such as sensitivity to stochastic fluctuations \citep{richter1972extinction, wright1983stochastic} and risk of extinction \citep{purvis2000predicting}. Monitoring animal population changes in response to anthropogenic pressure is becoming increasingly important as humans modify habitats and change climates as never before \citep{everatt2014trophic}. % may need more refs 
 Sensor technology, such as camera traps \citep{rowcliffe2008surveys, karanth1995estimating} and acoustic detectors \citep{ofarrel1999comparison, clark1995application, acevedo2006using} are becoming increasingly used to monitor changes in animal populations \citep{rowcliffe2008surveys, kessel2014review}, as they are efficient, relativity cheap and non-invasive \citep{cutler1999using}, allowing for surveys over large areas and long periods. However, the problem of converting sampled count data to estimates of density remains as efforts must be made to account for detectability of the animals \citep{anderson2001need}.
 
 
-%Current methods are often inadequate because of specific data requirements (marked indivudals)
-%REM developed for camera trap data, doesnt need this assumptions 
-%but has limitations
-%Specifically sensor widths - different environments might need more flexibility (examples) and signal directionality assumptions (examples) - method has been optimised for terrestrial large animals
+
 Methods do already exist for estimating animal density if the distance between the animal and the sensor can be estimated (e.g., capture-mark recapture methods \citep{karanth1995estimating} and distance sampling \citep{harris2013applying}). However, these methods often require additional information that may not be available. For example, capture-mark-recapture methods \citep{karanth1995estimating, trolle2003estimation, soisalo2006estimating, trolle2007camera} require recognition of individuals; distance methods require a distance estimation of how far away individuals are from the sensor {barlow2005estimates, marques2011estimating}. The development of the random encounter model (REM) (a modification of a gas model) enabled animal densities to be estimated from unmarked individuals of a known speed, and sensor detection parameters \citep{rowcliffe2008estimating}. The REM method has been successfully applied to estimate animal densities from camera trap surveys \citep{manzo2012estimation, zero2013monitoring}. However, extending the REM method to other types of sensors (for example acoustic detectors) is more problematic, because the original derivation assumes a relatively narrow sensor width (up to $\pi/2$ radians) and that the animal is equally detectable irrespective of its heading \citep{rowcliffe2008estimating}. 
 
 Whilst these restrictions are not problematic for most camera trap makes (e.g. Reconyx, Cuddeback), the REM could not be used to estimate densities from camera traps with a wider sensor width (e.g. canopy monitoring with fish eye lens \citep{brusa2014increasing}). Additionally, the REM method would not be useful in estimating densities from acoustic survey data as the acoustic detector angles are often wider than $\pi/2$ radians.  Acoustic detectors are designed for a range of diverse tasks and environments \citep{kessel2014review}, which will naturally lead to a wide range of sensor detection widths and detection distances. In addition to this, calls emitted by many animals are directional (breaking the assumption of the REM method). 
 
-%acoustic monitoring becoming more common method of monitoring but has additional sensor width problems (examples) and directionality of signals (examples). 
-%Currently the count data from acoustic monitoring is used for monitoring in different ways (examples). 
+
 There has been a sharp rise in interest around passive acoustic detectors in recent years, with a 10 fold increase in publications in the decade between 2000 and 2010 \citep{kessel2014review}. Acoustic monitoring is being developed to study many aspects of ecology, including the interactions of animals and their environments \citep{blumstein2011acoustic, rogers2013density}, the presence and relative abundances of species \citep{marcoux2011local}, and biodiversity of an area \citep{depraetere2012monitoring}. 
 
 Acoustic data suffers from many of the problems associated with data from camera trap surveys in that individuals are often unmarked so capture-make-recapture methods cannot be used to estimate densities. In some cases the distance between the animal and the sensor is known, for example when an array of sensors and the position of the animal is estimated by triangulation \citep{lewis2007sperm}. In these situations distance-sampling methods can be applied, a method typically used for marine mammals \citep{rogers2013density}. However, in many cases distance estimation is not possible, for example when single sensors are deployed, a situation typical in the majority of terrestrial acoustic surveys  \citep{elphick2008you, buckland2008estimating}. In these cases, only relative measures of local abundance can be calculated, and not absolute densities. This means that comparison of populations between species and sites is problematic without assuming equal detectability \citep{schmidt2003count}. %Poor reference but the best that I could find
@@ -132,7 +126,7 @@ The REM presented by \citep{rowcliffe2008estimating} adapts the gas model to mod
         \centering
 	\includegraphics[width=4cm]{imgs/angleDefinitions.pdf}
 
-\caption{Representation of sensor detection width and animal signal width. The filled square and circle represent a sensor and an animal, respectively; $\theta$, sensor detection width (radians); $r$, sensor detection distance; dark grey shaded area, sensor detection zone; $\alpha$, animal signal width (radians). Dashed lines around the filled square and circle represents the maximum extent of $\theta$ and $\alpha$, respectively.} % needs new description for the sensor detection zone  
+\caption{Representation of sensor detection width and animal signal width. The filled square and circle represent a sensor and an animal, respectively; $\theta$, sensor detection width (radians); $r$, sensor detection distance; dark grey shaded area, sensor detection zone; $\alpha$, animal signal width (radians). Dashed lines around the filled square and circle represents the maximum extent of $\theta$ and $\alpha$, respectively.} 
 \label{f:AngleDef}
 \end{figure}
 
@@ -221,11 +215,11 @@ gREM submodel specifications were done by hand, and the integration was done usi
 
 \subsection{Simulation Model}
 
-We tested the accuracy and precision of the gREM by developing a spatially explicit simulation of the interaction of sensors and animals using different combinations of sensor detection widths, animal signal widths, number of captures, and models of animal movement. 100 simulations were run where each consisted of a  \SI{7.5}{\kilo\meter} by \SI{7.5}{\kilo\meter} square (with periodic boundaries). A stationary sensor of radius $r$ was set up in the exact centre of each simulation, covering 7 sensor detection widths $\theta$ between 0 and $2\pi$( $2/9\pi$, $4/9\pi$, $6/9\pi$, $8/9\pi$, $10/9\pi$, $14/9\pi$, $2\pi$). Each simulation was populated with a density of \SI{70}{\animals\per\kilo\meter\squared}, calculated from the equation in \cite{damuth1981population} as the expected density of mammals of weighing \SI{1}{\gram}. This density therefore represents the highest likely density of indivudals, given that the smallest mammal is around \SI{2}{\grams} \cite{kateXXXXdatapaper}. Atotal of 3937 individuals per simulation were created which were placed randomly at the start of the simulation. Individuals were assigned 11 signal detection widths $\alpha$ between 0 and $\pi$ ($1/11\pi$,$2/11\pi$,$3/11\pi$,$4/11\pi$,$5/11\pi$,$6/11\pi$,$7/11\pi$,$8/11\pi$,$9/11\pi$,$10/11\pi$,$\pi$).
+We tested the accuracy and precision of the gREM by developing a spatially explicit simulation of the interaction of sensors and animals using different combinations of sensor detection widths, animal signal widths, number of captures, and models of animal movement. 100 simulations were run where each consisted of a  \SI{7.5}{\kilo\meter} by \SI{7.5}{\kilo\meter} square (with periodic boundaries). A stationary sensor of radius $r$ was set up in the exact centre of each simulation, covering 7 sensor detection widths $\theta$ between 0 and $2\pi$ ($2/9\pi$, $4/9\pi$, $6/9\pi$, $8/9\pi$, $10/9\pi$, $14/9\pi$, $2\pi$). Each simulation was populated with a density of \SI{70}{\animals\per\kilo\meter\squared}, calculated from the equation in \cite{damuth1981population} as the expected density of mammals of weighing \SI{1}{\gram}. This density therefore represents the highest likely density of indivudals, given that the smallest mammal is around \SI{2}{\gram} \cite{jones2009pantheria}. A total of 3937 individuals per simulation were created which were placed randomly at the start of the simulation. Individuals were assigned 11 signal detection widths $\alpha$ between 0 and $\pi$ ($1/11\pi$, $2/11\pi$, $3/11\pi$, $4/11\pi$, $5/11\pi$, $6/11\pi$, $7/11\pi$, $8/11\pi$, $9/11\pi$, $10/11\pi$, $\pi$).
 
 Each simulation lasted for $N$ steps (14400) of duration $T$ (15 minutes) giving a total duration of 150 days. The individuals moved within each step with a distance $d$, with an average speed, $v$. $d$, was sampled from a normal distribution with mean distance, $\mu_d = vT$, and standard deviation $\sigma_d = vT/10$. An average speed, $v = $ \SI{40}{\kilo\meter \per \day}, was chosen as this represents the largest day range of terrestrial animals \citep{carbone2005far}, and represents the upper limit of realistic speeds. At the end step, individuals were allowed to either remain stationary for a time step (with a given probability, $S$), change direction (with a maximum angle, $A$) between 0 and $\pi$. This resulted in 7 different movement models where: (1) simple movement, where $S$ and $A$ = 0; (2)stop-start movement, where (i) $S$ = 0.25, $A$ = 0, (ii) $S$ = 0.5, $A$ = 0, (iii) $S$ = 0.75, $A$ = 0; (3) random walk movement, where (i) $S$ = 0, $A$ = $\pi/3$, (ii) $S$ = 0, $A$ = $2\pi/3$, iii) $S$ = 0, $A$ = $\pi$. Individuals were counted as they moved in and out of the detection zone of the sensor per simulation. 
 
-We calculated the estimated animal density from the gREM by summing the number of captures per simulation and inputting these values into the correct gREM submodel. gREM accuracy was determined by comparing the density in the simulation with the estimated density. High accuracy is indicated by the mean difference between the estimated and actual values not being significantly different from zero (Wilcoxon text XXXref). gREM precision was determined by the standard deviation of estimated densities. We used this method to compare the accuracy and precision of all the gREM submodels. As these submodels are derived for different combinations of $\alpha$ and $\theta$, the accuracy and precision of the submodels was used to determine the impact of different values of $\alpha$ and $\theta$. 
+We calculated the estimated animal density from the gREM by summing the number of captures per simulation and inputting these values into the correct gREM submodel. gREM accuracy was determined by comparing the density in the simulation with the estimated density. High accuracy is indicated by the mean difference between the estimated and actual values not being significantly different from zero (Wilcoxon signed-rank test). gREM precision was determined by the standard deviation of estimated densities. We used this method to compare the accuracy and precision of all the gREM submodels. As these submodels are derived for different combinations of $\alpha$ and $\theta$, the accuracy and precision of the submodels was used to determine the impact of different values of $\alpha$ and $\theta$. 
 
 The influence of the number of captures and animal movement models on accuracy and precision was investigated using 4 different gREM submodels representative of the range $\alpha$ and $\theta$ values (submodels NW1, SW1, NE1, and SE3, Figure~\ref{f:equalRegions}). Using these four submodels, we calculated how long the simulation needed to run to generate a range of different capture numbers (from 10 to 100 captures in 10 unit intervals), and estimated animal density. These estimated densities were compared to the real density to assess the impact on the accuracy and precision on the gREM of different simulation lengths. We also used these four submodels to compare the accuracy and precision of a simple movement model, to stop-start movement models and random walk movement models. The gREM assumes that individuals move continuously with straight-line movement (simple movement model) and we therefore assessed the impact of breaking the gREM assumptions. 
 
@@ -248,43 +242,35 @@ The equation for $\bar{p}$ has been newly derived for each submodel in the gREM,
 \subsection{Simulation model}
 
 \subsubsection{gREM submodels}
-All gREM submodels showed a high accuracy, i.e., the mean difference between the estimated and actual values was not significantly different from zero across all models, corrected for multiple tests (all gREM sub models Wilcox test, p > xxx)(Figure~\ref{f:ModelBias}). However, the precision of the submodels do vary, where the gas model is the most precise and the SW7 sub model the least precise, having the smallest and the largest interquartile range, respectively (Figure~\ref{f:ModelBias}). The standard deviation of the error between the estimated and true densities is strongly related to both the sensor and signal widths (Figure~\ref{f:StandardDevaition}), such that larger widths have lower standard deviations (greater precision). However, even smaller sensor and signal widths have a relativity high level of precision. 
+All gREM submodels showed a high accuracy, i.e., the mean difference between the estimated and actual values was not significantly different from zero across all models, corrected for multiple tests (all gREM sub models Wilcoxon signed-rank test, p \textgreater 0.002)(Figure~\ref{f:ModelBias}). However, the precision of the submodels do vary, where the gas model is the most precise and the SW7 sub model the least precise, having the smallest and the largest interquartile range, respectively (Figure~\ref{f:ModelBias}). The standard deviation of the error between the estimated and true densities is strongly related to both the sensor and signal widths (Figure~\ref{f:StandardDevaition}), such that larger widths have lower standard deviations (greater precision). However, even smaller sensor and signal widths have a relativity high level of precision. 
 
-\begin{figure}
+\begin{figure}[t]
 	\centering
-	\begin{subfigure}[t]{7cm}
-		\includegraphics[width=7cm]{imgs/AverageModelBias.pdf}
-		\caption{} 
-		\label{f:ModelBias}
-	\end{subfigure}
-	
-	\begin{subfigure}[t]{7cm}
-		\includegraphics[width=7cm]{imgs/ResultStandardDeviation.pdf}
-		\caption{} 
-		\label{f:StandardDevaition}
-        \end{subfigure}
-        \caption{Simulation model results of the accuracy and precision for gREM submodels. The precentage error between estimated and true density for each gREM sub model is shown within each box plot, where the black line represents the median percentage error across all simulations, XXX boxes represent the lower and upper quartile XXX. Box colours correspond to the expressions for average profile width $\bar{p}$ given in {f:equalModelResults}.        
+	\includegraphics[width=7cm]{imgs/AverageModelBias.pdf}
+       	\caption{Simulation model results of the accuracy and precision for gREM submodels. The precentage error between estimated and true density for each gREM sub model is shown within each box plot, where the black line represents the median percentage error across all simulations, boxes represent the the middle 50\% of the data. Box colours correspond to the expressions for average profile width $\bar{p}$ given in {f:equalModelResults}.        
 } 
-	\label{f:AccAndPrec}
+	\label{f:ModelBias}
 \end{figure}
-
-
-%Put in the other figure here 
-
-\caption{Simulation model results of the gREM precision given a range of sensor and signal widths, shown by the standard deviation of the error between the estimated and true densities. Standard deviations are shown from deep red to pink, representing high to low values between 3.5xxxx to xxxx. 
+	
+\begin{figure}[t]
+	\includegraphics[width=7cm]{imgs/ResultStandardDeviation.pdf}
+	\caption{Simulation model results of the gREM precision given a range of sensor and signal widths, shown by the standard deviation of the error between the estimated and true densities. Standard deviations are shown from deep red to pink, representing high to low values between $0.483\times10^-6$ to $3.74\times10^-6$. 
         } 
-	\label{f:AccAndPrec}
+	\label{f:StandardDevaition}
 \end{figure}
+
+
+
 
 
 \subsubsection{Number of captures}
 
-Within the four gREM submodels tested (NW1, SW1, SE3, NE1), the  accuracy was not affected by the number of captures, where the mean difference between the estimated and actual values was not significantly different from zero across all capture rates, corrected for multiple tests (all gREM sub models Wilcox test, p > xxx)(Figure~\ref{f:Captures}). However, the precision was dependent on the number of captures across all four of the gREM submodels, where precision increases as number of captures increases(Figure~\ref{f:Captures}). For all gREM submodels, the the coefficient of variation falls below 10\% at XXX. 
+Within the four gREM submodels tested (NW1, SW1, SE3, NE1), the  accuracy was not affected by the number of captures, where the mean difference between the estimated and actual values was not significantly different from zero across all capture rates, corrected for multiple tests (all gREM sub models Wilcoxon signed-rank test, p \textgreater 0.008)(Figure~\ref{f:Captures}). However, the precision was dependent on the number of captures across all four of the gREM submodels, where precision increases as number of captures increases(Figure~\ref{f:Captures}). For all gREM submodels, the the coefficient of variation falls to 10\% at 100 captures. 
 
 \begin{figure}[t]
        \centering
 	\includegraphics[width=7cm]{imgs/ResultsNoCaptures.pdf}
-        \caption{Simulation model results of the accuracy and precision of four gREM submodels (NW1, SW1, SE3 and NE1) given different numbers of captures. The precentage error between estimated and true density within each gREM sub model for capture rate is shown within each box plot. Sensor and signal widths vary between submodels. The colour of each box plot corresponds to the expressions for average profile width $\bar{p}$ given in {f:equalModelResults}.        }            
+        \caption{Simulation model results of the accuracy and precision of four gREM submodels (NW1, SW1, SE3 and NE1) given different numbers of captures. The percentage error between estimated and true density within each gREM sub model for capture rate is shown within each box plot. Sensor and signal widths vary between submodels. The colour of each box plot corresponds to the expressions for average profile width $\bar{p}$ given in Figure 4. }            
 	\label{f:Captures}
 \end{figure}
 
@@ -292,7 +278,7 @@ Within the four gREM submodels tested (NW1, SW1, SE3, NE1), the  accuracy was no
 
 \subsubsection{Movement models}
 
-Within the four gREM submodels tested (NW1, SW1, SE3, NE1), neither the  accuracy or precision was affected by the amount of time spent stationary. The mean difference between the estimated and actual values was not significantly different from zero for each category of stationary time (0, 0.25, 0.5 and 0.75), corrected for multiple tests (all gREM sub models Wilcox test, p > xxx)(Figure~\ref{f:Perch}). Altering the maximum change in direction in each step (0, pi/3, 2pi/3, and pi) did not affect the accuracy or precision of the four gREM submodels tested (Figure~\ref{f:Tort}). 
+Within the four gREM submodels tested (NW1, SW1, SE3, NE1), neither the  accuracy or precision was affected by the amount of time spent stationary. The mean difference between the estimated and actual values was not significantly different from zero for each category of stationary time (0, 0.25, 0.5 and 0.75), corrected for multiple tests (all gREM sub models Wilcoxon signed-rank test, p \textgreater 0.12)(Figure~\ref{f:Perch}). Altering the maximum change in direction in each step (0, pi/3, 2pi/3, and pi) did not affect the accuracy or precision of the four gREM submodels tested (all gREM sub models Wilcoxon signed-rank test, p \textgreater 0.05)(Figure~\ref{f:Tort}). 
 
 
 \begin{figure}[t]
@@ -312,7 +298,7 @@ Within the four gREM submodels tested (NW1, SW1, SE3, NE1), neither the  accurac
          \end{subfigure}
 	\label{f:BreakAssump}
 	\caption{
-	Simulation model results of the accuracy and precision of four gREM submodels (NW1, SW1, SE3 and NE1) given different movement models where (A) amount of time spent stationary (stop-start movement) and (B) maximum change in direction at each step (correlated random walk model). The precentage error between estimated and true density within each gREM sub model for the different movement models is shown within each box plot. The simple model is represented where time and maximum change in direction equals 0. The colour of each box plot corresponds to the expressions for average profile width $\bar{p}$ given in {f:equalModelResults}.       } 
+	Simulation model results of the accuracy and precision of four gREM submodels (NW1, SW1, SE3 and NE1) given different movement models where (A) amount of time spent stationary (stop-start movement) and (B) maximum change in direction at each step (correlated random walk model). The percentage error between estimated and true density within each gREM sub model for the different movement models is shown within each box plot. The simple model is represented where time and maximum change in direction equals 0. The colour of each box plot corresponds to the expressions for average profile width $\bar{p}$ given in \ref{f:equalModelResults}.} 
 \end{figure}
 
                   
@@ -320,39 +306,30 @@ Within the four gREM submodels tested (NW1, SW1, SE3, NE1), neither the  accurac
 %%%% ------- Discussion ---------%%%%
 \section{Discussion}
 
-% Point out the importance of the results and place them in the context of previous studies and in relation to the application of the work (expanding on the Synthesis and applications section of the Summary). Where appropriate, set out recommendations for management or policy. There is no significant difference in the variance for the change, this could be because of the between the step length of the animal movement, 15 minutes, means that immediate double counting of the same animal is unlikely.  In the case where large directional changes are likely to occur within short periods of time leading to double counting of the same animal within a short period of time may need to be adjusted because of this. 
-
-%% Include one comments about day range not affecting
-
-%% Restate what was found.
-We have developed the gREM such that it can be used to estimate density from acoustic and optical sensors. This has entailed a generalisation of the gas model and the REM in \citep{rowcliffe2008estimating} to be applicable to any combination of sensor width and call directionality. We have used simulations to show, as a proof of principle, that these models are accurate and precise. The precision of the gREM was found to be dependent on the width of the sensor and the call, and the number of captures.
+We have developed the gREM such that it can be used to estimate density from acoustic sensors and camera traps. This has entailed a generalisation of the gas model and the REM in \citep{rowcliffe2008estimating} to be applicable to any combination of sensor width and signal directionality. We have used simulations to show, as a proof of principle, that these models are accurate and precise. The precision of the gREM was found to be dependent on the width of the sensor and the call, and the number of captures.
 
 \subsection{Analytical model}
-The gREM was derived for different combinations of $\alpha$ and $\theta$ resulting in 25 different submodels, the expression for $\bar{p}$ are equal for many of these submodels resulting in 8 different equations including the previously derived gas model and REM. These submodels were tested for consistency with adjacent expressions being equal at their boundaries. These new submodels will allow researchers evaluate the absolute density of animals that have previously been difficult to study with noninvasive methods such as remove sensors. The gREM allows the data from acoustic detectors to be used where an animal has a directional call, this could be used for a range of animals including bats, songbirds, Cetaceans and forest primates. 
+The gREM was derived for different combinations of $\alpha$ and $\theta$ resulting in 25 different submodels, the expression for $\bar{p}$ are equal for many of these submodels resulting in 8 different equations including the previously derived gas model and REM. These submodels were tested for consistency with adjacent expressions being equal at their boundaries. These new submodels will allow researchers to evaluate the absolute density of animals that have previously been difficult to study with noninvasive methods such as remove sensors. The gREM allows the data from acoustic detectors to be used where an animal has a directional calls, this could be used for a range of animals including bats, songbirds, Cetaceans and forest primates. 
 
-There are a number of positive extensions to the gREM which could be developed in the future. The original gas model was formulated for the case where both subjects, either animal and detector, or animal and animal, are moving \citep{Hutchinson_Waser_2007}. Indeed any of the models with animals that are equally detectable in all directions ($\alpha = 2\pi$) can be trivially expanded for moving by substituting the sum of the average animal velocity and the sensor velocity for $v$ as used here. However, when the animal has a directional call, the extension becomes much less simple. The approach would be to calculate again the mean profile width. However, for each angle of approach, one would have to average the profile width for an animal facing in any direction (i.e. not necessarily moving towards the sensor) weighted by the relative velocity of that direction. There are a number of situations where a moving detector and animal could occur and as such may be advantage to have a method of estimating densities from the data collected, e.g. an acoustic detector based off a boat when studying Cetacea or sea birds \citep{yack2013passive}. Another interesting, and so far unstudied problem, is edge effects caused by trigger delays (the delay between sensing an animal and attempting to record the encounter) and time expansion acoustic detectors which repeatedly turn on an off during sampling. Both of these have potential biases as animals can move through the detection zone without being detected. The models herein are formulated assuming constant surveillance and so the error quickly becomes negligible. For example, if it takes longer for the recording device to be switched on than the length of some animal calls there could be a systematic underestimation of density.
+There are a number of positive extensions to the gREM which could be developed in the future. The original gas model was formulated for the case where both subjects, either animal and detector, or animal and animal, are moving \citep{Hutchinson_Waser_2007}. Indeed any of the models with animals that are equally detectable in all directions ($\alpha = 2\pi$) can be trivially expanded for moving by substituting the sum of the average animal velocity and the sensor velocity for $v$ as used here. However, when the animal has a directional call, the extension becomes less simple. The approach would be to calculate again the mean profile width. However, for each angle of approach, one would have to average the profile width for an animal facing in any direction (i.e. not necessarily moving towards the sensor) weighted by the relative velocity of that direction. There are a number of situations where a moving detector and animal could occur and as such may be advantage to have a method of estimating densities from the data collected, e.g. an acoustic detector based off a boat when studying Cetacea or sea birds \citep{yack2013passive}. Another interesting, and so far unstudied problem, is edge effects caused by trigger delays (the delay between sensing an animal and attempting to record the encounter) and time expansion acoustic detectors which repeatedly turn on an off during sampling. Both of these have potential biases as animals can move through the detection zone without being detected. The models herein are formulated assuming constant surveillance and so the error quickly becomes negligible. For example, if it takes longer for the recording device to be switched on than the length of some animal calls there could be a systematic underestimation of density.
 
 
 \subsection{Accuracy and Precision}
-We tested each of the gREM submodels for accuracy and precision through a simulation. All the submodels produced estimated densities that were not significantly different from the true density of the simulation. Therefore based on these simulations we believe that the gREM has the potential produce accurate estimates for many different species, using either camera traps or acoustic detectors. However the precision of the gREM differed between submodels, when the sensor and signal width were smaller then the precision of the model was reduced. When choosing a sensor for the study using the gREM the detection width should be maximised, and if the study species has a narrow directionality other aspects of the study protocol must be used to compensate. 
+We tested each of the gREM submodels for accuracy and precision through a simulation. All the submodels produced estimated densities that were not significantly different from the true density of the simulation. Therefore based on these simulations we believe that the gREM has the potential to produce accurate estimates for many different species, using either camera traps or acoustic detectors. However the precision of the gREM differed between submodels. For example, when the sensor and signal width were smaller then the precision of the model was reduced, so when choosing a sensor for use in a gREM study the detection width should be maximised, and if the study species has a narrow signal directionality other aspects of the study protocol should be used to compensate. 
 
-The precision of the gREM is greatly affected by the number of captures that are collected, the coefficient of variation falls dramatically between 10 and 60 captures and then after this continues to slowly reduce. At about 100 captures the four submodels have all reached 10\% coefficient of variation, and therefore we believe at this point the models are precise. The length of surveys in the field will need to be adjusted so that enough data is collected to reach this level of precision, populations of fast moving animals, or with large densities will require less survey effort than those with slow moving or low densities. 
+The precision of the gREM is greatly affected by the number of captures that are collected, the coefficient of variation falls dramatically between 10 and 60 captures and then after this continues to slowly reduce. At 100 captures the submodels reach 10\% coefficient of variation, and therefore we believe at this point the models are precise. The length of surveys in the field will need to be adjusted so that enough data is collected to reach this level of precision, populations of fast moving animals or populations with large densities will require less survey effort than those with slow moving or low densities. 
 
-The gREM was both accurate and precise for all the movement models we tested against, stop-start movement and correlated random walks. However these movement models are still simple representations of true animal movement which often consist of multiple different behaviours %REF.
-The accuracy of the gREM may be affected by the interaction between the movement model and the size of the detection radius. In figure \ref{} we studied a relatively long step length compared to the size of the detection radius, and therefore the chance of catching the same animal multiple times within a short space of time was reduced. However if the ratio of step length to detection radius was reduced then this may decrease the precision of the model. 
+The gREM was both accurate and precise for all the movement models we tested against, stop-start movement and correlated random walks. However these movement models are still simple representations of true animal movement which often consist of multiple be dependent on multiple factors such as behavioural state and and existence of home ranges \citep{smouse2010stochastic}. The accuracy of the gREM may be affected by the interaction between the movement model and the size of the detection radius. In figure \ref{f:Tort} we studied a relatively long step length compared to the size of the detection radius, and therefore the chance of catching the same animal multiple times within a short space of time was reduced. However if the ratio of step length to detection radius was smaller then this may decrease the precision of the model, however this should not decrease its accuracy. 
 
-Although we have used simulations to validate the gREM submodels, much more robust testing is needed. Although difficult, proper field test validation would be required before the models could be fully trusted. The REM \citep{rowcliffe2008estimating} has already been field tested, and both \citet{rowcliffe2008estimating} and \citet{zero2013monitoring} both found that the REM was an effective manner of estimating animal densities \citep{rowcliffe2008estimating, zero2013monitoring}. In some taxa gold standard methods of estimating animal density exist, such as capture mark recapture. Where these gold standard exist, and have been proved to work, a simultaneous gREM study could be completed to test the accuracy under field conditions. An easier way to continue to evaluate the models is to run more extensive simulations which break the assumptions of the analytical models. The main element that cannot be analytically treated is the complex movement of real animals. Therefore testing these methods against true animal traces, or more complex movement models would be useful.
+Although we have used simulations to validate the gREM submodels, much more robust testing is needed. Although difficult, proper field test validation would be required before the models could be fully trusted. The REM \citep{rowcliffe2008estimating} has already been field tested, and both \citet{rowcliffe2008estimating} and \citet{zero2013monitoring} both found that the REM was an effective manner of estimating animal densities \citep{rowcliffe2008estimating, zero2013monitoring}. In some taxa gold standard methods of estimating animal density exist, such as capture mark recapture. Where these gold standard exist, and have been proved to work, a simultaneous gREM study could be completed to test the accuracy under field conditions. An easier way to continue to evaluate the models is to run more extensive simulations which break the assumptions of the analytical models. The main element that cannot be analytically treated is the complex movement of real animals. Therefore testing these methods against true animal traces, or more complex movement models would be required.
 
-Within the simulation we have assumed an equal density across the entire world, however in a field environment the situation would be much more complex, with additional variation coming from local changes in density between camera sites. We also assume perfect knowledge of the average speed of an animal and size of the detection zone, and instant triggering of the camera. All of which may lead to possible bias or a decrease in precision.    
+Within the simulation we have assumed an equal density across the entire world, however in a field environment the situation would be much more complex, with additional variation coming from local changes in density between camera sites. In the simulation we ran the speed of the animal as  $\SI{40}{\kilo\meter \per \day}$, the largest day range of terrestrial animals \citep{carbone2005far}, other speed values should not alter the accuracy or the precision of the gREM. We also assume perfect knowledge of the average speed of an animal and size of the detection zone, and instant triggering of the camera. All of which may lead to possible bias or a decrease in precision. 
 
 \subsection{Implications for conservation}
 The gREM is therefore available for the estimation of density of a number of taxa of importance to conservation, zoonotic diseases and ecosystem services. The models provided are suitable for certain groups for which there are currently no, or few, effective methods for density estimation. Any species that would be consistently recorded at least once when within range of a detector would be a suitable subject for the gREM, such as bats \citep{kunz2009methods}, songbirds \citep{buckland2006point}, Cetaceans \citep{marques2009estimating} or forest primates \citep{hassel2008reliable}. Within increasing technological capabilities, this list of species is likely to increase dramatically.
 
 Importantly the methods are noninvasive and do not require human marking or naturally identifying marks (as required for mark-recapture models). This makes them suitable for large, continuous monitoring projects with limited human resources. It also makes them suitable for species that are under pressure, species that cannot naturally be individually recognised or species that are difficult or dangerous to catch.
 
-
-
- 
 
 %%%% ------- Acknowledgments ---------%%%%
 \section{Acknowledgments}
